# nuxtjs-vue

./: db.sqlite3  package-lock.json  pyproject.toml
backend/: settings.py  urls.py
frontend/: nuxt.config.js  package-lock.json  package.json
