[tool.poetry]
name = "projeto-django-nuxt"
version = "1.0.0"
description = ""
authors = ["Erkmann <erkmann08@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
django = "^3.0.6"
djangorestframework = "^3.12.1"
djangorestframework-simplejwt = "^4.4.0"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
